<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">身份证验证</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="IDnum">身份证号：</string>
    <string name="tips">请输入身份证号码</string>
    <string name="btn_search">查 询</string>
    <string name="btn_clear">清 除</string>
    <string name="authorInfo">作者QQ:272964081，支持版本：Android 4.4.2以上，版本：v1.0</string>

</resources>
