<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.imooc.searchforid.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/IDnum"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_IDnum"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:singleLine="true"
            android:background="@drawable/white_bg"
            android:gravity="center_vertical"
            android:hint="@string/tips"
            android:maxLines="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_search"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:background="@drawable/orange_selector"
            android:text="@string/btn_search"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/orange_selector"
            android:text="@string/btn_clear"
            android:textColor="#ff0000"
            android:textSize="25sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/show_sex"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/gray"
        android:gravity="bottom"
        android:textColor="@color/orange"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/show_birthday"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/gray"
        android:gravity="bottom"
        android:textColor="@color/orange"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/show_address"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/gray"
        android:gravity="bottom"
        android:textColor="@color/orange"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/authorInfo"
            android:textColor="@color/sivler"
            android:textSize="17sp" />
    </RelativeLayout>

</LinearLayout>